clusters-apps/apps/IoT/emqx.yaml
# apiVersion: apps.emqx.io/v2beta1
# kind: EMQX
# metadata:
#    name: emqx
#   #  namespace: media
# spec:
#    image: emqx:5.1
---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: media-local-mvd-sh
#   namespace: media # This namespace should be the same as where the service runs
# spec:
#   secretName: media-local-mvd-sh-tls
#   issuerRef:
#     name: letsencrypt-production
#     kind: ClusterIssuer
#   commonName: "media.local.mvd.sh"
#   dnsNames:
#     - "media.local.mvd.sh"
# ---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: emqx
  # namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-internal  
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`emqx.local.mvd.sh`)
    kind: Rule
    services:
    - name: my-emqx
      port: 18083
  # tls:
  #   secretName: media-local-mvd-sh-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: emqx
  # namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-internal  
spec:
  entryPoints:
    - mqtt
    - mqttssl
    - mqttws
    - mqttwss
  routes:
  # - match: HostSNIRegexp(`emqx.local.mvd.sh`)
  # - match: HostSNI(`*`)
  - match: ClientIP(`192.168.0.0/16`)
    services:
    - name: my-emqx-headless 
      port: 8083
    - name: my-emqx-headless 
      port: 8084
    - name: my-emqx-headless 
      port: 1883       
    - name: my-emqx-headless 
      port: 8883
    middlewares:
    - name: iot-whitelist
      
    # middlewares:
    # - name: plex-direct-whitelist
  # tls:
  #   passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: emqx
  # namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-internal  
spec:
  entryPoints:
    - mqtt
    - mqttssl
    - mqttws
    - mqttwss
  routes:
  # - match: HostSNIRegexp(`emqx.local.mvd.sh`)
  # - match: HostSNI(`*`)
  - match: ClientIP(`192.168.0.0/16`, `10.0.0.0/8`, `172.16.0.20`)
    services:
    - name: my-emqx 
      port: 8083
    - name: my-emqx 
      port: 8084
    - name: my-emqx 
      port: 1883       
    - name: my-emqx 
      port: 8883
    middlewares:
    - name: iot-whitelist
      
    # middlewares:
    # - name: plex-direct-whitelist
  # tls:
  #   passthrough: true
